# SciBaseCPP

./: CMakeLists.txt  LICENSE
src/: main.cpp
tests/: test_main.cpp
